Add to food cards plus styling

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>purefoods App</title>
+    <link rel="stylesheet" href="/icons.css">
   </head>
   <body>
     <div id="app"></div>
