--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>purefoods App</title>
-    <link rel="stylesheet" href="/icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Catamaran:400,800" rel="stylesheet">
+    <link rel="stylesheet" href="icons.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
